0.82.26 (next)
  - Fixed RUWNATCH command, which was broken by another
    fix sometime back designed to stop PIC event
    processing while in the debugger.
  - Debugger interface fixed to keep the SDL event
    handling going during the "pager" routine to
    prevent Windows from graying out the main window
    as "not responding" in Windows 7/8/10.
  - Direct3D support has been fixed to properly render
    pixel shaders again that were already written for
    other forks.
  - Added "Rescan all drives" menu command and mapper
    shortcut (Issue #1379 requested by saintfrater)
0.82.25
  - Added 1920x1440 4:3 HD VESA BIOS mode and increased
    scaler limits to support it.
  - VESA BIOS emulation now rejects video modes that
    exceed the render scaler architecture's limits,
    to avoid frozen screens if set. However, VESAMOED.COM
    warns the user, so if the user ignores the warning,
    VESA BIOS emulation will allow user-defined modes
    that exceed the limits anyway.
  - VESAMOED.COM will now warn you if the custom mode
    you modified exceeds the render scaler's limits.
  - VGA emulation now reports render scaler limits
    in the logfile at startup, if debug logging is
    enabled.
  - Render scaler code now logs a warning when it
    rejects a video mode that exceeds the render
    scaler limits.
  - S3 emulation now allows 16MB of video memory.
  - Due to continuous problems with DOS games and a
    very long VESA modelist, the defaults for VESA
    BIOS options in dosbox.conf have been changed to
    limit the modelist to something a late 1990s
    VESA BIOS would list. New defaults include a
    maximum resolution of 1280x1024, the removal of
    4bpp 16-color packed, unusual video modes,
    "High Definition" TV broadcast modes, and the
    extra explicitly defined 24bpp modes to complement
    VBE1.2 32bpp modes. Those options remain
    changeable and all limits can be lifted with
    settings in dosbox.conf if wanted.