@@ -3310,7 +3310,13 @@ void DEBUG_Enable_Handler(bool pressed) {
 		return;
 
     /* this command is now a toggle! */
-    if (debugging) {
+    /* However this should break back into the debugger if RUNWATCH is active */
+    if (debug_running) {
+        debug_running = false;
+        DEBUG_DrawScreen();
+        return;
+    }
+    else if (debugging) {
         DrawRegistersUpdateOld();
         debugging=false;
 
